<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StudentsActivity"
        android:background="#AAAAAA">

    <Button
            android:text="@string/plus_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ranks_add_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#D38B10"/>
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appBarLayout_ranks"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#D38B10"
                app:titleTextAppearance="@style/toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        <TextView
                android:text="Istituto - Classe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ranks_school_title"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:textSize="24sp"
                android:background="#D38B10"/>
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/type_students_linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout_ranks" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ranks_add_btn" android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp" android:layout_marginTop="8dp">
        <TextView
                android:text="@string/rank_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ranks_date_label"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:textSize="24sp"
                android:background="#D5B177"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp" android:layout_marginTop="6dp"
                android:layout_marginRight="4dp"/>
        <TextView
                android:text="@string/subject_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ranks_subj_label"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:textSize="24sp"
                android:background="#D5B177"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp" android:layout_marginTop="6dp"
                android:layout_marginRight="4dp"/>
        <TextView
                android:text="@string/rank_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ranks_type_label"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:textSize="24sp"
                android:background="#D5B177"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="4dp" android:layout_marginTop="6dp"
                android:layout_marginRight="4dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/students_ranks_recycler"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

