<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClassesActivity"
        android:background="#AAAAAA" android:id="@+id/constraintLayout2">

    <Button
            android:text="@string/plus_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/classes_add_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:background="#479B4A"/>
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/appBarLayout_classes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="#479B4A"
                app:titleTextAppearance="@style/toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        <TextView
                android:text="@string/sub_classes_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/classes_title"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:textSize="24sp"
                android:background="#479B4A"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout_classes"
            app:layout_constraintBottom_toTopOf="@+id/classes_add_btn">
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:prompt="@string/schools_prompt"
                android:id="@+id/schools_spinner"
                android:popupBackground="#AED581"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@android:drawable/btn_dropdown"
                app:layout_constraintBottom_toTopOf="@+id/classes_recycler"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/school_spinner_label"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"/>
        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/classes_recycler"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@+id/schools_spinner"/>
        <TextView
                android:text="Seleziona Istituto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/class_title"
                android:id="@+id/school_spinner_label"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/schools_spinner"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/classes_recycler"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>