<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#AAAAAA">
    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextAppearance="@style/toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        <TextView
                android:text="@string/main_activity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_title"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:textSize="24sp"/>

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp" android:fitsSystemWindows="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent">

        <!-- <include layout="@layout/content_main_scroll" android:layout_width="0dp" android:layout_height="0dp"
                 app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="90dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
        /> -->

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:fillViewport="true"
                android:id="@+id/scrollView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/divider">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                <Button
                        android:text="@string/subjects_btn_label"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        style="@style/class_title"
                        android:id="@+id/subjects_btn"
                        android:background="#FFD54F"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:textSize="24sp"
                        android:textColor="#464646"
                        android:layout_marginTop="8dp"/>
                <Button
                        android:text="@string/schools_btn_label"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:id="@+id/schools_btn"
                        style="@style/class_title"
                        android:background="#E57373"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:textSize="24sp"
                        android:textColor="#464646"
                        android:layout_marginTop="8dp"
                />
                <Button
                        android:text="@string/classes_label"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:id="@+id/classes_btn"
                        style="@style/class_title"
                        android:background="#AED581"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"
                        android:textSize="24sp"
                        android:textColor="#464646"
                        android:layout_marginTop="8dp"/>
            </LinearLayout>
        </ScrollView>
        <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:tabTextAppearance="@style/class_title"
                android:id="@+id/schools_tab"
                app:tabIndicatorColor="#4DB6AC"
                android:background="#AED581"
                app:tabTextColor="#464646"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="4dp" android:layout_marginEnd="4dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/divider">

        </com.google.android.material.tabs.TabLayout>
        <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toBottomOf="@+id/schools_tab">
        </androidx.viewpager.widget.ViewPager>
        <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="5dp"
                android:background="@color/colorPrimary"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2"
                app:layout_constraintBottom_toTopOf="@+id/schools_tab" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="4dp" android:layout_marginRight="4dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>